Fix : Optimize dashboard